# aoc-2022

./: pyproject.toml
day1/: day1a.py  day1b.py
day2/: day2a.py  day2b.py
day3/: day3a.py  day3b.py
day4/: day4a.py  day4b.py
day5/: day5a.py  day5b.py
day6/: day6a.py  day6b.py
day7/: day7a.py  day7b.py
day8/: day8a.py  day8b.py
