[tool.poetry]
name = "aoc-2022"
version = "0.1.0"
description = ""
authors = ["Tobias Messner <tobias.d.messner@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
advent-of-code-data = "^1.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
